# Course_project_1

./: .env.example  .flake8  README.md  pyproject.toml  report.txt  user_settings.py
src/: logger.py  main.py  report.txt  reports.py  services.py  utils.py  views.py
tests/: conftest.py  report.txt  test_reports.py  test_services.py  test_utils.py  test_views.py
